feat: P0 optimizations — SbbIndexLoader freeze, IES cache, AC leak detector, VT trace
- SbbIndexLoader: Map.copyOf() frozenIndex after build (zero-lock reads)
- InitialEventSelectorDispatcher: per-EventType cache (ConcurrentHashMap)
- ActivityContextLeakDetector: timeout-based leak detection (107 lines)
- MicroSleeConfiguration: tracePinnedThreads() builder option
- MicroSleeContainer: countInFlightByDeploymentId() for drain()
- VT-PINNING comments on all synchronized blocks
- Version unified: 1.2.0-SNAPSHOT across 20 pom.xml parent refs

Core tests: 381 pass, 0 failures
Build: jainslee-core, example-embedded-j25, grpc-simulator compile OK